# MyThingapp

./: .gitignore  Launch-MyThing.ps1  README.md  SETUP.md  index.html  package-lock.json  package.json  proposal.md  to-do-list.md  vite.config.js
agency/roles/: 01-platform-architect.md
config/: agency-roles.json  agent-tools.json  backup.json  favorites-defaults.json  lmstudio.json  whisper.json  work-folder.json
data/: schema.sql
data/migrations/: 002_launcher_apps.sql  003_tasks_and_backup.sql  004_favorites_panel.sql  005_calendar_reminders.sql  006_media.sql  007_ai_chat.sql  008_integrations.sql  009_agent_threads.sql
launcher/: Cargo.toml
launcher/src/: main.rs  release.rs
scripts/: copyLauncher.js  fixGeneratedPhysiologyNarration.cjs  fixMigrationChecksum.js  setupWhisper.js  validateNarration.js  verifyAgentActions.js  verifyVoicePhrases.js  whisper-spike-readme.md
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/backup/: commands.rs  mod.rs
src-tauri/src/launcher/: commands.rs  mod.rs
src-tauri/src/lmstudio/: mod.rs
src-tauri/src/whisper/: commands.rs  mod.rs
src/components/: BadgeToast.vue  ContextPicker.vue  CrossLinkNode.vue  DesktopRequired.vue  DetailPanel.vue  GameHud.vue  GraphCanvas.vue  HubActionMenu.vue  Legend.vue  MissionBoard.vue  NarrationStudio.vue  NarratorBubble.vue  NodeCard.vue  PredictionOverlay.vue  StartScreen.vue
src/composables/: useGame.js  useGraphLayout.js  (+5 more)
templates/: sample-narration-for-ai.json  template.json
(+86 files in other folders)
